--- a/AdsLibrary/build.gradle
+++ b/AdsLibrary/build.gradle
@@ -48,5 +48,8 @@ afterEvaluate {
                 version = '1.0.0'
             }
         }
+        repositories {
+            mavenLocal()
+        }
     }
 }
