--- a/AdsLibrary/build.gradle
+++ b/AdsLibrary/build.gradle
@@ -31,22 +31,19 @@ android {
 dependencies {
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.google.android.gms:play-services-ads:22.2.0'
+    implementation 'com.google.android.gms:play-services-ads:22.3.0'
 }
 
-afterEvaluate {
-    publishing {
-        publications {
-            release(MavenPublication) {
-                from components.release
+publishing {
+    publications {
+        release(MavenPublication) {
+            groupId = 'com.github.ashtray4715'
+            artifactId = 'admob-ad-library'
+            version = '4.0.0'
 
-                groupId = 'com.github.ashtray'
-                artifactId = 'admob-ad-library'
-                version = '1.0.0'
+            afterEvaluate {
+                from components.release
             }
-        }
-        repositories {
-            mavenLocal()
         }
     }
 }
